# atcoder-similarity-search

./: .gitignore  LICENSE  README.md  cloudbuild.yaml
.claude/: settings.json
backend/: .dockerignore  Cargo.toml  Dockerfile
backend/src/: main.rs
frontend/: .env.example
frontend/src/app/: layout.tsx  page.tsx
scripts/: ingest.py  requirements.txt
terraform/: main.tf  outputs.tf  variables.tf
